optimized search filter to only go once through the list